<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_height="wrap_content"
android:layout_width="match_parent"
android:orientation="vertical">

<ImageView
    android:id="@+id/iv_contact_photo"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:contentDescription="@string/contact_photo_descr" />

<TextView
    android:id="@+id/tv_contact_name"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/contact_name"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:layout_alignBottom="@+id/iv_contact_photo"
    android:paddingBottom="16dp"
    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
    android:textAlignment="center" />

<TextView
    android:id="@+id/tv_lbl_contact_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/lbl_contact_title"
    android:layout_below="@+id/iv_contact_photo"
    android:layout_marginTop="20dp"
    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
    android:layout_marginLeft="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginRight="16dp"/>

<TextView
    android:id="@+id/tv_contact_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_toEndOf="@+id/tv_lbl_contact_title"
    android:layout_toRightOf="@+id/tv_lbl_contact_title"
    android:layout_alignBaseline="@+id/tv_lbl_contact_title"
    android:text="@string/no_contact_title"/>

<View
    android:id="@+id/divider1"
    style="@style/divider"
    android:layout_below="@id/tv_lbl_contact_title" />

<TextView
    android:id="@+id/tv_lbl_contact_email"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/lbl_contact_email"
    android:layout_below="@+id/divider1"
    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
    android:layout_alignLeft="@id/tv_lbl_contact_title"
    android:layout_alignStart="@id/tv_lbl_contact_title"/>

<TextView
    android:id="@+id/contact_email"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_toEndOf="@+id/tv_lbl_contact_email"
    android:layout_toRightOf="@+id/tv_lbl_contact_email"
    android:layout_alignBaseline="@+id/tv_lbl_contact_email"
    android:layout_alignLeft="@+id/tv_contact_title"
    android:text="@string/no_contact_email"/>

<View
    android:id="@+id/divider2"
    style="@style/divider"
    android:layout_below="@id/tv_lbl_contact_email" />

<TextView
    android:id="@+id/tv_lbl_contact_phone"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/lbl_contact_phone"
    android:layout_below="@+id/divider2"
    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
    android:layout_alignLeft="@id/tv_lbl_contact_title"
    android:layout_alignStart="@id/tv_lbl_contact_title"/>

<TextView
    android:id="@+id/contact_phone"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_toEndOf="@+id/tv_lbl_contact_phone"
    android:layout_toRightOf="@+id/tv_lbl_contact_phone"
    android:layout_alignBaseline="@+id/tv_lbl_contact_phone"
    android:layout_alignLeft="@+id/tv_contact_title"
    android:text="@string/no_contact_phone"/>

</RelativeLayout>